<resources>
    <string name="app_name">i_Attend</string>
    <!--Login Strings -->
    <string name="number">Number</string>
    <string name="email_hint">Email</string>
    <string name="login">LOGIN</string>
    <string name="password_hint">Password</string>
    <string name="take_attendance_for_unit_name">Take attendance for(Unit Name)</string>
    <string name="click_unit_name_to_take_attendance">Click Unit Name To Take Attendance</string>
    <string name="continue1">CONTINUE</string>
    <string name="class_name">Class Name</string>
    <string name="time">Time</string>
    <string name="time_of_class">Time of Class</string>
    <string name="unit_name">Unit Name</string>
    <string name="time_of_Class">time of Class</string>
    <string name="welcome">WELCOME</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">NEXT</string>
    <string name="resetPass">Reset Password</string>

    <!--CardView Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Take attendance</string>
    <string name="action_next_course">Play Next</string>
    <string name="backdrop_title">ATTENDANCE SYSTEM</string>
    <string name="backdrop_subtitle">You have no new notifications</string>
    <string name="todo">TODO</string>

    <!--QR Code scanner Strings -->
    <string name="title_activity_attend">Take Attendance</string>
    <string name="lbl_time">TIME OF LECTURE</string>
    <string name="lbl_lec_name">INSTRUCTOR</string>
    <string name="lbl_date">DATE</string>
    <string name="lbl_unit_name">UNIT</string>
    <string name="lbl_regno">REG NO</string>
    <string name="lbl_button_take">TAKE ATTENDANCE</string>
    <string name="msg_error_scan">That did not Work. Please scan QR codes given by the Lec again</string>

    <string name="msg_error_details">Sorry details could not be loaded try again</string>


    <string name="scan_the_qr_code_given_by_the_instructor_to_take_attendance">Scan the QR code given by the instructor to take attendance</string>
    <string name="scan_qr_code">Scan QR Code</string>

</resources>
