<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#E8E8E8F0"
        android:gravity="center">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="30dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:drawableRight="@drawable/ic_visibility_off_black_24dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="352dp"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resetPassButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/forgot_password"
            android:textColor="#40a6e6"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>